--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# ------------------------
+#  Dependencies
+# ------------------------
+node_modules/
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,32 +10,45 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# ------------------------
+#  Testing & Coverage
+# ------------------------
+coverage/
+jest-test-results.json
 
-# next.js
-/.next/
-/out/
+# ------------------------
+#  Next.js Build Outputs
+# ------------------------
+.next/
+out/
+build/
 
-# production
-/build
+# ------------------------
+#  TypeScript
+# ------------------------
+*.tsbuildinfo
+next-env.d.ts
 
-# misc
-.DS_Store
+# ------------------------
+#  Environment & Secrets
+# ------------------------
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Never commit sensitive credentials
 *.pem
+*.key
+*.crt
 
-# debug
+# ------------------------
+#  Logs & Debug Files
+# ------------------------
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+bun-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
